обновлена домашняя работа #5

--- a/homework-3/homework clustering.ipynb
+++ b/homework-3/homework clustering.ipynb
@@ -527,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "source_cleaned = source_max.filter(['comment', 'x', 'y', 'comment_class'], axis=1)\n",
@@ -761,7 +763,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "scaler = StandardScaler()"
@@ -770,7 +774,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "source_cleaned[['x', 'y']] = scaler.fit_transform(source_cleaned[['x', 'y']])"
@@ -942,7 +948,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k_inertia = []\n",
@@ -1279,7 +1287,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "source_yes = source_cleaned[source_cleaned['comment_class'] == 1]"
@@ -1288,7 +1298,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k_inertia_yes = []\n",
@@ -1817,7 +1829,9 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clusters = dbscan.fit_predict(source_cleaned[['x', 'y']])"
@@ -1886,7 +1900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
