--- a/homework-2/homework_2.ipynb
+++ b/homework-2/homework_2.ipynb
@@ -617,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X['title'] = X['name'].str.split().apply(lambda x: ([s for s in x if s.endswith('.')][0:1] or [''])[0])"
@@ -1617,7 +1619,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X['age'] = X.groupby('sex').age.transform(lambda x: x.fillna(x.mean()))"
@@ -2205,7 +2209,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X['embarked'].fillna(X['embarked'].value_counts().idxmax(), inplace=True)"
@@ -2988,7 +2994,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "depths = np.arange(1,10)\n",
@@ -3167,7 +3175,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "submit = pd.DataFrame(y_pred, columns=sample_submission.columns[1:])\n",
@@ -3264,7 +3274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
