--- a/homework-10/homework_10.ipynb
+++ b/homework-10/homework_10.ipynb
@@ -6,29 +6,263 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from surprise import KNNWithMeans, KNNBasic\n",
     "from surprise import Dataset\n",
-    "from surprise import accuracy\n",
-    "from surprise import Reader\n",
-    "from surprise.model_selection import train_test_split"
+    "from surprise.model_selection import train_test_split\n",
+    "from surprise.model_selection import GridSearchCV\n",
+    "from surprise import KNNWithMeans\n",
+    "from surprise import accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = Dataset.load_builtin(name='ml-1m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainset, testset = train_test_split(data, test_size=.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'k': [20, 50], \n",
+    "    'sim_options': {'name': ['pearson_baseline', 'cosine', 'msd'], 'user_based': [False, True]},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = GridSearchCV(KNNWithMeans, param_grid, measures=['rmse', 'mae'], cv=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset ml-1m could not be found. Do you want to download it? [Y/n] Y\n",
-      "Trying to download dataset from http://files.grouplens.org/datasets/movielens/ml-1m.zip...\n"
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n"
      ]
     }
    ],
    "source": [
-    "data = Dataset.load_builtin(name='ml-1m')"
+    "search.fit(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8674720036852843"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search.best_score['rmse']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'k': 20, 'sim_options': {'name': 'pearson_baseline', 'user_based': False}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search.best_params['rmse']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.knns.KNNWithMeans at 0x7f0077da4240>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "algo = KNNWithMeans(k = 20, sim_options = {'name': 'pearson_baseline', 'user_based': False})\n",
+    "algo.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pred = algo.test(testset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8551\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8551451346924254"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy.rmse(test_pred, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Победа!! :)"
    ]
   },
   {
